Refactor; enhance docs